minor modal change

--- a/client/src/Components/CardItem/cardItem.css
+++ b/client/src/Components/CardItem/cardItem.css
@@ -131,6 +131,7 @@
   text-align: center;
   justify-content: center;
   margin-left: 4px;
+  font-size: 12px;
 }
 
 .modal_item_size_properties_naming > span {
