--- a/client/src/Components/ChangeModal/modal.css
+++ b/client/src/Components/ChangeModal/modal.css
@@ -61,3 +61,20 @@
 .modal_button::after {
   transform: rotate(-45deg) translateX(0px);
 }
+
+@media (max-width: 424px) {
+  /* MOBILE */
+  .modal-content {
+    width: 256px;
+    color: black;
+    min-height: 200px;
+    background-color: #a7a7a7;
+    border: 0;
+    border-radius: 13px;
+    padding: 25px;
+  }
+  .modal_button {
+    top: -5px;
+    left: 230px;
+  }
+}
