--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -22,6 +22,10 @@
   color: #f6f7f9;
 }
 
+.navbar_logo {
+  height: 70px;
+}
+
 .menu_links {
   margin-right: 80px;
 }
@@ -35,4 +39,51 @@
 .selected {
   border-bottom: 1px solid white;
   margin-right: 80px;
+}
+
+.divider {
+  display: none;
+}
+
+@media (max-width: 424px) {
+  /* MOBILE */
+
+  .navbar {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    margin: 5px 20px;
+  }
+  .menu_links {
+    margin-right: 0;
+    text-align: center;
+  }
+  .selected {
+    margin-right: 0;
+    text-align: center;
+  }
+  .navbar_links {
+    display: flex;
+    flex-direction: column;
+  }
+  .divider {
+    margin: 0 20px;
+  }
+
+  .menu_links:hover {
+    color: white;
+    border: 0;
+    font-weight: bold;
+    transition: all 1s ease-in;
+  }
+
+  .selected {
+    border: 0;
+    font-weight: bold;
+    transition: all 1s ease-in;
+    color: #ffffff;
+    text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff0,
+      0 -18px 40px #fF0;
+  }
 }
