--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -45,6 +45,18 @@
   display: none;
 }
 
+@media (min-width: 425px) and (max-width: 1024px) {
+  /* TABLET */
+  .menu_links {
+    margin-right: 20px;
+    text-align: center;
+  }
+  .selected {
+    margin-right: 20px;
+    text-align: center;
+  }
+
+}
 @media (max-width: 424px) {
   /* MOBILE */
 
