--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -55,7 +55,6 @@
     margin-right: 20px;
     text-align: center;
   }
-
 }
 @media (max-width: 424px) {
   /* MOBILE */
@@ -65,7 +64,7 @@
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    margin: 5px 20px;
+    margin: 30px 20px 0;
   }
   .menu_links {
     margin-right: 0;
@@ -96,6 +95,6 @@
     transition: all 1s ease-in;
     color: #ffffff;
     text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff0,
-      0 -18px 40px #fF0;
+      0 -18px 40px #ff0;
   }
 }
